signup/signin endpoint and wrapper function created

--- a/GoBlogApp/templates/signup.html
+++ b/GoBlogApp/templates/signup.html
@@ -60,7 +60,7 @@
       <img src="/static/images/GoBlog.png" alt="GoBlog.png"/>
       <ul>
           <li><a href="main">Home</a></li>
-          <li><a href="#">Sign In</a></li>
+          <li><a href="/signin">Sign In</a></li>
           <li><a href="/showSignUp">Sign Up</a></li>
       </ul>
     </div>
